docs/7.52/md/abenddic_builtin_types_intro.md
---
title: "Predefined Data Types in ABAP Dictionary"
description: |
  The predefined data types in ABAP Dictionary -   are used to construct the actual data types (data elements, structures (including database tables and views), table types, and CDS entities) in ABAP Dictionary In ABAP, however, they cannot be addressed directly using only these types and are therefor
version: "7.52"
category: "types"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenddic_builtin_types_intro.htm"
abapFile: "abenddic_builtin_types_intro.htm"
keywords: ["do", "if", "data", "types", "abenddic", "builtin", "intro"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Dictionary](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_dictionary.htm) → 

Predefined Data Types in ABAP Dictionary

The predefined data types in ABAP Dictionary

-   are used to construct the actual data types (data elements, structures (including database tables and views), table types, and CDS entities) in ABAP Dictionary In ABAP, however, they cannot be addressed directly using only these types and are therefore known as external data types.

-   have special technical and semantic attributes that support modeling of semantic models.

-   represent an interface between the predefined ABAP types and all possible vendor-specific data types of the supported databases. A corresponding mapping takes place in both directions.

The following sections describe the attributes of the predefined data types in ABAP Dictionary:

-   [Overview of All Predefined Dictionary Types](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenddic_builtin_types.htm)

-   [Attributes of the Predefined Dictionary Types](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenddic_builtin_types_prop.htm)

-   [Use of the Predefined Dictionary Types](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenddic_builtin_type_usage.htm)

Continue
[Overview of All Built-In Dictionary Types](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenddic_builtin_types.htm)
[Attributes of the Predefined Dictionary Types](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenddic_builtin_types_prop.htm)
[Use of the Built-In Dictionary Types](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenddic_builtin_type_usage.htm)