docs/7.53/md/abenddic_builtin_types_intro.md
---
title: "Built-In Data Types in ABAP Dictionary"
description: |
  The built-in data types in ABAP Dictionary are used as follows: -   They are used to construct the actual data types (data elements, structures (including database tables and views), table types, and CDS entities) in ABAP Dictionary. In ABAP, however, they cannot be addressed directly using only the
version: "7.53"
category: "ui"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddic_builtin_types_intro.htm"
abapFile: "abenddic_builtin_types_intro.htm"
keywords: ["do", "if", "data", "types", "abenddic", "builtin", "intro"]
---

* * *

AS ABAP Release 753, ©Copyright 2019 SAP AG. All rights reserved.

[ABAP Keyword Documentation](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenabap.htm) →  [ABAP - Dictionary](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenabap_dictionary.htm) → 

Built-In Data Types in ABAP Dictionary

The built-in data types in ABAP Dictionary are used as follows:

-   They are used to construct the actual data types (data elements, structures (including database tables and views), table types, and CDS entities) in ABAP Dictionary. In ABAP, however, they cannot be addressed directly using only these types and are therefore known as external data types.

-   They have special technical and semantic attributes that support modeling of semantic models.

-   They represent an interface between the built-in ABAP types and all possible vendor-specific data types of the supported databases. A corresponding mapping takes place in both directions.

The following sections describe the attributes of the built-in data types in ABAP Dictionary:

-   [Overview of All Built-In Dictionary Types](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddic_builtin_types.htm)

-   [Attributes of the Built-In Dictionary Types](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddic_builtin_types_prop.htm)

-   [Use of the Built-In Dictionary Types](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddic_builtin_type_usage.htm)

Example

The database table DEMO\_DDIC\_TYPES has columns with many different built-in data types of ABAP Dictionary.

Continue
[Overview of All Built-In Dictionary Types](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddic_builtin_types.htm)
[Attributes of the Built-In Dictionary Types](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddic_builtin_types_prop.htm)
[Use of the Built-In Dictionary Types](https://help.sap.com/doc/abapdocu_753_index_htm/7.53/en-US/abenddic_builtin_type_usage.htm)